# writing-a-c-compiler

./: .gitignore  flake.nix  writing-a-c-compiler.cabal
app/: Main.hs
src/: AssembleAndLink.hs  CodeGen.hs  Emission.hs  Lexer.x  Parser.hs  Preprocess.hs  Tacky.hs
