cabal-version:      2.4
name:               writing-a-c-compiler
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Vaibhav Sagar
maintainer:         vaibhavsagar@gmail.com
-- copyright:
category:           Development
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Preprocess
                      AssembleAndLink
                      Lexer
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.7 && <5
                    , array
                    , bytestring
                    , filepath
                    , process
    build-tools:      alex
    hs-source-dirs:   src
    default-language: Haskell2010

executable writing-a-c-compiler
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.7 && <5
                    , directory
                    , optparse-applicative  <0.19
                    , writing-a-c-compiler

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite writing-a-c-compiler-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >=4.7 && <5
                    , writing-a-c-compiler
